--- a/build.xml
+++ b/build.xml
@@ -48,9 +48,27 @@
     		remote="origin/${branch_merge_from}"
     		message="merging repos" commit="true" />
     						
-    						
     		<exec command='sed -i "s*${branch_merge_from}*${branch_merge_into}*g" ${src.dir.resolved}/composer.json' />
+    		
+	</target>
+	
 
+	<target name="push">
+			<!--
+			<gitcommit
+                repository="${src.dir.resolved}" message="Automatic commit of branch ${branch_merge_into}, create ${tag_name} on ${TSTAMP}" >
+				<fileset dir="${src.dir.resolved}" >
+					<include name="composer.json" />
+					<include name="composer.lock" />
+				</fileset>
+			</gitcommit>
+			-->
+            <gittag repository="${src.dir.resolved}" name="${tag_name}" message="Automatic tag of branch ${branch_merge_into}, create ${tag_name} on ${TSTAMP} "/>    
+            
+            <gitpush
+				repository="${src.dir.resolved}"
+				refspec="${branch_merge_into}:${branch_merge_into}" tags="true" />
+               
 	</target>
 	
 	<target name="composer_update" description="Update extensions and 3rd part lib using composer">
