add ghtool feature

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 
 composer.bin=/usr/local/bin/composer
-repository=git@github.com:oat-sa/tao-enterprise
+ghtoolkit.bin=/home/ec2-user/environment/build-tools/github-tools/ghtoolkit/ghtoolkit
+repository=git@github.com:oat-sa/tao-enterprise-act
 branch_merge_from=alpha
-branch_merge_into=beta
-
+branch_merge_into=alpha
+tag_name=v0.74.5-alpha
